--- a/requirements.txt
+++ b/requirements.txt
@@ -4,10 +4,10 @@ chardet==4.0.0
 click==7.1.2
 cryptography==3.3.1
 dnspython==2.0.0
-email-validator==1.1.2
 Flask==1.1.2
 Flask-SQLAlchemy==2.4.4
 Flask-WTF==0.14.3
+gunicorn==20.0.4
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
@@ -19,6 +19,7 @@ mysqlclient==2.0.2
 numpy==1.19.4
 pandas==1.2.0
 protobuf==3.14.0
+psycopg2==2.8.6
 pycparser==2.20
 pyOpenSSL==20.0.1
 python-dateutil==2.8.1
@@ -26,6 +27,7 @@ pytz==2020.5
 requests==2.25.1
 six==1.15.0
 SQLAlchemy==1.3.22
+SQLAlchemy-Utils==0.36.8
 urllib3==1.26.2
 Werkzeug==1.0.1
-WTForms==2.3.3
+
